--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>Document</title>
 </head>
 <body>
+
+    <input type="text" name="test" id="inputName">
+    <select id="dropdown">
+        <option value="0">0</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+        <option value="7">7</option>
+        <option value="8">8</option>
+      </select>
+
     
     <script src="script.js"></script>
 </body>
