--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
 </head>
 <body>
 
-    <input type="text" name="test" id="inputName">
+    <input type="text" name="input" id="inputID">
     <select id="dropdown">
-        <option value="0">0</option>
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5">5</option>
-        <option value="6">6</option>
-        <option value="7">7</option>
-        <option value="8">8</option>
+        <option value="0">If input is a first name: Make the first character in a name uppercase, and the rest lowercase</option>
+        <option value="1">If input is a full name: Find the first name</option>
+        <option value="2">If input is a full name: Find the length of the first name</option>
+        <option value="3">If input is a full name: Find the middle name start and end position, and the middle name itself in a full name string</option>
+        <option value="4">If input is a filename: Check if a filename is .png or .jpg</option>
+        <option value="5">If input is a password: Hide a password with the correct number of *s</option>
+        <option value="6">With any input: Make the third character uppercase</option>
+        <option value="7">With any input: Make a character uppercase, if it follows a space or a hyphen</option>
       </select>
+      <input type="text" name="output" id="output">
+      <button id="button">Press here</button>
 
     
     <script src="script.js"></script>
