print result in p-tag

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <option value="6">With any input: Make the third character uppercase</option>
         <option value="7">With any input: Make a character uppercase, if it follows a space or a hyphen</option>
       </select>
-      <input type="text" name="output" id="output">
+      <p id="output"></p>
       <button id="button">Press here</button>
 
     
