--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-
+<section>
     <input type="text" name="input" id="inputID">
     <select id="dropdown">
         <option value="0">If input is a first name: Make the first character in a name uppercase, and the rest lowercase</option>
@@ -18,9 +19,10 @@
         <option value="5">If input is a password: Hide a password with the correct number of *s</option>
         <option value="6">With any input: Make the third character uppercase</option>
         <option value="7">With any input: Make a character uppercase, if it follows a space or a hyphen</option>
-      </select>
+    </select>
       <p id="output"></p>
       <button id="button">Press here</button>
+</section>
 
     
     <script src="script.js"></script>
